hphp/hack/test/typecheck/is_expression/softtype.php.like_types.exp
File "softtype.php", line 6, characters 13-15:
Soft typehints cannot be used with is-expressions (Parsing[1002])
File "softtype.php", line 6, characters 13-16:
Invalid "is" expression hint (Typing[4195])
File "softtype.php", line 6, characters 13-16:
The "is" operator cannot be used with a union
